src/validation/tests/snapshots/rusty__validation__tests__bitaccess_validation_test__wordaccess_range_test.snap
---
source: src/validation/tests/bitaccess_validation_test.rs
expression: "&diagnostics"
---
error[E057]: Word-Wise access for type DWORD must be in range 0..1
  ┌─ <internal>:6:19
  │
6 │                 c.%W2;
  │                   ^^^ Word-Wise access for type DWORD must be in range 0..1

error[E057]: Word-Wise access for type LWORD must be in range 0..3
  ┌─ <internal>:7:19
  │
7 │                 d.%W4;
  │                   ^^^ Word-Wise access for type LWORD must be in range 0..3
